const { Model, DataTypes } = require('sequelize');

module.exports = (sequelize) => {
    class Student extends Model {
        static associate(models) {
            Student.belongsTo(models.User, {
                foreignKey: 'user_id',
                targetKey: 'userId',
                as: 'user'
            });
            Student.belongsTo(models.Teacher, {
                foreignKey: 'advisor_id',
                targetKey: 'teacherId',
                as: 'advisor'
            });
            Student.belongsTo(models.Curriculum, {
                foreignKey: 'curriculum_id',
                targetKey: 'curriculumId',
                as: 'studentCurriculum'
            });
            Student.hasMany(models.ProjectMember, {
                foreignKey: 'student_id',
                as: 'projectMemberships'
            });
            // Student.hasMany(models.InternshipDocument, {
            //     foreignKey: \'studentId\',
            //     as: \'internshipDocuments\'
            // });
            Student.hasMany(models.ProjectDocument, {
                foreignKey: 'student_id',
                as: 'projectDocuments'
            });
            Student.hasMany(models.Document, {
                foreignKey: 'user_id',
                sourceKey: 'user_id',
                as: 'documents'
            });
            Student.hasMany(models.TimelineStep, {
                foreignKey: 'student_id',
                as: 'timelineSteps'
            });
            Student.hasMany(models.StudentProgress, {
                foreignKey: 'student_id',
                as: 'progressData'
            });
            Student.hasMany(models.StudentWorkflowActivity, {
                foreignKey: 'student_id',
                as: 'workflowActivities'
            });
            Student.hasMany(models.StudentAcademicHistory, {
                foreignKey: 'student_id',
                as: 'academicHistories'
            });
        }

        async checkInternshipEligibility() {
            try {
                const Academic = sequelize.models.Academic;
                const { calculateStudentYear } = require('../utils/studentUtils');

                // ตรวจสอบชั้นปีก่อน
                const yearInfo = calculateStudentYear(this.studentCode);
                if (yearInfo.error) {
                    return {
                        eligible: false,
                        reason: `ไม่สามารถคำนวณชั้นปีได้: ${yearInfo.message}`,
                        canAccessFeature: false,
                        canRegister: false
                    };
                }

                // ตรวจสอบว่าเป็นนักศึกษาปี 3 ขึ้นไปหรือไม่
                const MIN_YEAR_FOR_INTERNSHIP = 3;
                if (yearInfo.year < MIN_YEAR_FOR_INTERNSHIP) {
                    return {
                        eligible: false,
                        reason: `ต้องเป็นนักศึกษาชั้นปีที่ ${MIN_YEAR_FOR_INTERNSHIP} ขึ้นไป (ปัจจุบันอยู่ชั้นปีที่ ${yearInfo.year})`,
                        canAccessFeature: false,
                        canRegister: false
                    };
                }

                const studentSpecificCurriculum = await this.getStudentCurriculum();

                let requiredTotalCredits;
                let requiredMajorCreditsForInternship;
                let curriculumName = "ไม่พบข้อมูลหลักสูตร";

                if (studentSpecificCurriculum) {
                    requiredTotalCredits = studentSpecificCurriculum.internshipBaseCredits;
                    requiredMajorCreditsForInternship = studentSpecificCurriculum.internshipMajorBaseCredits;
                    curriculumName = studentSpecificCurriculum.name;
                    console.log(`Student.js: Internship Eligibility - Using student's assigned curriculum`, {
                        studentCode: this.studentCode,
                        curriculumName: curriculumName,
                        curriculumId: studentSpecificCurriculum.curriculumId
                    });
                } else {
                    // กรณีไม่พบ Curriculum ที่ผูกกับนักศึกษา
                    console.warn(`Student.js: ไม่พบ Curriculum ที่ผูกกับนักศึกษา ${this.studentCode}. กำลังพยายามใช้ Active Curriculum ของระบบ.`);

                    // 1. ดึง Academic record ล่าสุด (เพื่อหา active curriculum id)
                    const academicSettingsFallback = await Academic.findOne({ order: [['created_at', 'DESC']] });

                    // 2. ตรวจสอบว่ามี activeCurriculumId หรือไม่
                    if (academicSettingsFallback?.activeCurriculumId) {
                        // 3. ดึง Curriculum ที่ active ตาม id ที่ได้จาก Academic
                        const activeSystemCurriculum = await sequelize.models.Curriculum.findOne({
                            where: { curriculumId: academicSettingsFallback.activeCurriculumId, active: true }
                        });

                        // 4. ถ้าพบ curriculum ที่ active
                        if (activeSystemCurriculum) {
                            requiredTotalCredits = activeSystemCurriculum.internshipBaseCredits;
                            requiredMajorCreditsForInternship = activeSystemCurriculum.internshipMajorBaseCredits;
                            curriculumName = `(Fallback) ${activeSystemCurriculum.name}`;
                            console.log(`Student.js: Fallback to Active System Curriculum: ${curriculumName} (ID: ${activeSystemCurriculum.curriculumId})`);
                        } else {
                            // 5. ไม่พบ curriculum ที่ active ตาม id ที่ได้
                            console.error(`Student.js: ไม่พบ Curriculum ที่ active ตาม activeCurriculumId (${academicSettingsFallback.activeCurriculumId}) ในระบบ`);
                        }
                    } else {
                        // 6. ไม่พบค่า activeCurriculumId ใน Academic record
                        console.error('Student.js: ไม่พบค่า activeCurriculumId ใน Academic record');
                    }
                }

                if (requiredTotalCredits === undefined || requiredTotalCredits === null) {
                    console.error('Student.js: ไม่สามารถกำหนดเกณฑ์หน่วยกิตรวมสำหรับการฝึกงานได้');
                    return { eligible: false, reason: 'ระบบไม่สามารถกำหนดเกณฑ์หน่วยกิตฝึกงานได้', canAccessFeature: false, canRegister: false };
                }

                console.log('Student.js - checkInternshipEligibility (using specific/fallback curriculum):', {
                    studentTotalCredits: this.totalCredits,
                    requiredTotalCredits: requiredTotalCredits,
                    studentMajorCredits: this.majorCredits,
                    requiredMajorCreditsForInternship: requiredMajorCreditsForInternship,
                });

                if (this.totalCredits < requiredTotalCredits) {
                    return {
                        eligible: false,
                        reason: `หน่วยกิตรวมไม่เพียงพอ (มี ${this.totalCredits} จากเกณฑ์ ${requiredTotalCredits} ของหลักสูตร: ${curriculumName})`,
                        canAccessFeature: false,
                        canRegister: false
                    };
                }

                if (requiredMajorCreditsForInternship !== undefined && requiredMajorCreditsForInternship !== null) {
                    if (this.majorCredits < requiredMajorCreditsForInternship) {
                        return {
                            eligible: false,
                            reason: `หน่วยกิตวิชาภาคไม่เพียงพอ (มี ${this.majorCredits} จากเกณฑ์ ${requiredMajorCreditsForInternship} ของหลักสูตร: ${curriculumName})`,
                            canAccessFeature: false,
                            canRegister: false
                        };
                    }
                }

                console.log('Student.js - Passed INTERNSHIP credit checks.');
                return {
                    eligible: true,
                    reason: `ผ่านเกณฑ์หน่วยกิต (หลักสูตร: ${curriculumName})`,
                };

            } catch (error) {
                console.error('Error in Student.checkInternshipEligibility:', error);
                return {
                    eligible: false,
                    reason: 'เกิดข้อผิดพลาดในการตรวจสอบสิทธิ์ฝึกงาน (Student.js)',
                };
            }
        }

        async checkProjectEligibility() {
            try {
                const Academic = sequelize.models.Academic;
                const { calculateStudentYear } = require('../utils/studentUtils');

                // ตรวจสอบชั้นปีก่อน
                const yearInfo = calculateStudentYear(this.studentCode);
                if (yearInfo.error) {
                    return {
                        eligible: false,
                        reason: `ไม่สามารถคำนวณชั้นปีได้: ${yearInfo.message}`,
                        canAccessFeature: false,
                        canRegister: false
                    };
                }

                // ตรวจสอบว่าเป็นนักศึกษาปี 4 ขึ้นไปหรือไม่
                const MIN_YEAR_FOR_PROJECT = 4;
                if (yearInfo.year < MIN_YEAR_FOR_PROJECT) {
                    return {
                        eligible: false,
                        reason: `ต้องเป็นนักศึกษาชั้นปีที่ ${MIN_YEAR_FOR_PROJECT} ขึ้นไป (ปัจจุบันอยู่ชั้นปีที่ ${yearInfo.year})`,
                        canAccessFeature: false,
                        canRegister: false
                    };
                }

                const studentSpecificCurriculum = await this.getStudentCurriculum();

                let requiredTotalCredits;
                let requiredMajorCredits;
                let curriculumName = "ไม่พบข้อมูลหลักสูตร";
                let requiresInternshipCompletion = false;

                if (studentSpecificCurriculum) {
                    requiredTotalCredits = studentSpecificCurriculum.projectBaseCredits;
                    requiredMajorCredits = studentSpecificCurriculum.projectMajorBaseCredits;
                    requiresInternshipCompletion = studentSpecificCurriculum.requireInternshipBeforeProject;
                    curriculumName = studentSpecificCurriculum.name;
                    console.log(`Student.js: Project eligibility for student ${this.studentCode}, Curriculum: ${curriculumName} (ID: ${studentSpecificCurriculum.curriculumId})`);
                } else {
                    console.warn(`Student.js: ไม่พบ Curriculum ที่ผูกกับนักศึกษา ${this.studentCode} สำหรับโครงงาน. กำลังพยายามใช้ Active Curriculum ของระบบ.`);
                    const academicSettingsFallback = await Academic.findOne({ order: [['created_at', 'DESC']] });
                    if (academicSettingsFallback?.activeCurriculumId) {
                        const activeSystemCurriculum = await sequelize.models.Curriculum.findOne({
                            where: { curriculumId: academicSettingsFallback.activeCurriculumId, active: true }
                        });
                        if (activeSystemCurriculum) {
                            requiredTotalCredits = activeSystemCurriculum.projectBaseCredits;
                            requiredMajorCredits = activeSystemCurriculum.projectMajorBaseCredits;
                            requiresInternshipCompletion = activeSystemCurriculum.requireInternshipBeforeProject;
                            curriculumName = `(Fallback) ${activeSystemCurriculum.name}`;
                            console.log(`Student.js: Fallback to Active System Curriculum for Project: ${curriculumName} (ID: ${activeSystemCurriculum.curriculumId})`);
                        }
                    }
                }

                if (requiredTotalCredits === undefined || requiredTotalCredits === null) {
                    console.error('Student.js: ไม่สามารถกำหนดเกณฑ์หน่วยกิตรวมสำหรับโครงงานได้');
                    return { eligible: false, reason: 'ระบบไม่สามารถกำหนดเกณฑ์หน่วยกิตโครงงานได้' };
                }
                if (requiredMajorCredits === undefined || requiredMajorCredits === null) {
                    console.warn('Student.js: ไม่ได้กำหนดเกณฑ์หน่วยกิตวิชาภาคสำหรับโครงงานในหลักสูตรนี้ จะไม่นำมาพิจารณา');
                }

                console.log('Student.js - checkProjectEligibility (using specific/fallback curriculum):', {
                    studentTotalCredits: this.totalCredits,
                    requiredTotalCredits: requiredTotalCredits,
                    studentMajorCredits: this.majorCredits,
                    requiredMajorCredits: requiredMajorCredits,
                });

                if (this.totalCredits < requiredTotalCredits) {
                    return {
                        eligible: false,
                        reason: `หน่วยกิตรวมไม่เพียงพอสำหรับโครงงาน `,
                        // เพิ่ม field ให้สอดคล้องกับรูปแบบที่ service คาดหวัง
                        canAccessFeature: false,
                        canRegister: false,
                    };
                }

                if (requiredMajorCredits !== undefined && requiredMajorCredits !== null) {
                    if (this.majorCredits < requiredMajorCredits) {
                        return {
                            eligible: false,
                            reason: `หน่วยกิตวิชาภาคไม่เพียงพอสำหรับโครงงาน (มี ${this.majorCredits} จากเกณฑ์ ${requiredMajorCredits} ของหลักสูตร: ${curriculumName})`,
                            canAccessFeature: false,
                            canRegister: false,
                        };
                    }
                }

                if (requiresInternshipCompletion) {
                    const InternshipDocument = sequelize.models.InternshipDocument;
                    const completedInternship = await InternshipDocument.findOne({
                        where: {
                            studentId: this.studentId,
                            status: 'completed'
                        }
                    });

                    if (!completedInternship) {
                        return {
                            eligible: false,
                            reason: 'ต้องผ่านการฝึกงานก่อนจึงจะสามารถลงทะเบียนโครงงานพิเศษได้',
                            canAccessFeature: false,
                            canRegister: false,
                        };
                    }
                }

                console.log('Student.js - Passed PROJECT credit checks.');
                return {
                    eligible: true,
                    reason: `ผ่านเกณฑ์หน่วยกิตโครงงาน (หลักสูตร: ${curriculumName})`,
                    // เมื่อผ่าน ให้เปิด access และ register (ใน Phase ปัจจุบัน)
                    canAccessFeature: true,
                    canRegister: true,
                };

            } catch (error) {
                console.error('Error in Student.checkProjectEligibility:', error);
                return {
                    eligible: false,
                    reason: 'เกิดข้อผิดพลาดในการตรวจสอบสิทธิ์โครงงาน (Student.js)',
                };
            }
        }
    }

    Student.init({
        studentId: {
            type: DataTypes.INTEGER,
            primaryKey: true,
            autoIncrement: true,
            field: 'student_id'
        },
        userId: {
            type: DataTypes.INTEGER,
            allowNull: false,
            field: 'user_id'
        },
        curriculumId: {
            type: DataTypes.INTEGER,
            allowNull: true,
            field: 'curriculum_id',
            references: {
                model: 'curriculums',
                key: 'curriculum_id'
            }
        },
        studentCode: {
            type: DataTypes.STRING(13),
            allowNull: false,
            unique: true,
            field: 'student_code'
        },
        classroom: {
            type: DataTypes.STRING(10),
            allowNull: true,
            comment: 'ห้องเรียน (RA, RB, RC, DA, DB, CSB)'
        },
        phoneNumber: {
            type: DataTypes.STRING(15),
            allowNull: true,
            field: 'phone_number',
            comment: 'เบอร์โทรศัพท์นักศึกษา'
        },
        totalCredits: {
            type: DataTypes.INTEGER,
            defaultValue: 0,
            field: 'total_credits'
        },
        majorCredits: {
            type: DataTypes.INTEGER,
            defaultValue: 0,
            field: 'major_credits'
        },
        gpa: {
            type: DataTypes.DECIMAL(3, 2),
            allowNull: true
        },
        studyType: {
            type: DataTypes.ENUM('regular', 'special'),
            allowNull: false,
            defaultValue: 'regular',
            field: 'study_type'
        },
        isEligibleInternship: {
            type: DataTypes.BOOLEAN,
            defaultValue: false,
            field: 'is_eligible_internship'
        },
        isEligibleProject: {
            type: DataTypes.BOOLEAN,
            defaultValue: false,
            field: 'is_eligible_project'
        },
        advisorId: {
            type: DataTypes.INTEGER,
            allowNull: true,
            field: 'advisor_id'
        },
        // ลบ field studentYear (ชั้นปี) ออก เพราะจะคำนวณจาก studentCode + ปีการศึกษาปัจจุบัน
        // studentYear: {
        //     type: DataTypes.INTEGER,
        //     allowNull: true,
        //     defaultValue: 1,
        //     field: 'student_year',
        //     validate: {
        //         min: 1,
        //         max: 8
        //     }
        // },
        internshipStatus: {
            type: DataTypes.ENUM('not_started', 'pending_approval', 'in_progress', 'completed'),
            defaultValue: 'not_started',
            field: 'internship_status'
        },
        projectStatus: {
            type: DataTypes.ENUM('not_started', 'in_progress', 'completed', 'failed'),
            defaultValue: 'not_started',
            field: 'project_status'
        },
        isEnrolledInternship: {
            type: DataTypes.BOOLEAN,
            defaultValue: false,
            field: 'is_enrolled_internship'
        },
        isEnrolledProject: {
            type: DataTypes.BOOLEAN,
            defaultValue: false,
            field: 'is_enrolled_project'
        }
    }, {
        sequelize,
        modelName: 'Student',
        tableName: 'students',
        timestamps: true,
        underscored: true,
        indexes: [
            {
                name: 'idx_student_advisor',
                fields: ['advisor_id']
            },
            {
                unique: true,
                name: 'idx_student_code',
                fields: ['student_code']
            },
            // ลบ index ของ student_year ออก เพราะไม่มี field นี้แล้ว
            // {
            //     name: 'idx_student_year',
            //     fields: ['student_year']
            // },
            {
                name: 'idx_student_curriculum',
                fields: ['curriculum_id']
            },
            {
                name: 'idx_student_classroom',
                fields: ['classroom']
            }
        ]
    });

    return Student;
};
