erDiagram
    User {
        int user_id PK
        string username UK
        string password "nullable (SSO)"
        string email UK
        enum role "student|teacher|admin"
        string first_name
        string last_name
        boolean active_status "default: true"
        datetime last_login
        string sso_provider
        string sso_id
        datetime created_at
        datetime updated_at
    }

    Student {
        int student_id PK
        int user_id FK
        int curriculum_id FK
        string student_code UK
        string classroom
        string phone_number
        decimal total_credits
        decimal major_credits
        decimal gpa
        enum study_type "regular|special"
        boolean is_eligible_internship
        boolean is_eligible_project
        int advisor_id FK
        string internship_status
        string project_status
        boolean is_enrolled_internship
        boolean is_enrolled_project
    }

    Teacher {
        int teacher_id PK
        string teacher_code UK
        int user_id FK
        string contact_extension
        enum teacher_type "academic|support"
        string position
        boolean can_access_topic_exam
        boolean can_export_project1
    }

    Admin {
        int admin_id PK
        string admin_code UK
        int user_id FK
        text responsibilities
        string contact_extension
    }

    PasswordResetToken {
        int id PK
        int user_id FK
        enum purpose "PASSWORD_CHANGE"
        string otp_hash
        string temp_new_password_hash
        int attempt_count
        datetime expires_at
        datetime used_at
    }

    User ||--o| Student : "has"
    User ||--o| Teacher : "has"
    User ||--o| Admin : "has"
    User ||--o{ PasswordResetToken : "requests"
    Student }o--o| Teacher : "advisor"
